--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jginsburgn/ssd-toy#readme",
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^1.0.0",
-    "@tensorflow/tfjs": "^1.0.2"
+    "@tensorflow/tfjs": "^1.0.2",
+    "image-capture": "^0.4.0"
   }
 }
